--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <HTML>
 <HEAD>
-<BODY>
+  <meta charset="UTF-8">
+  <title> Página da Ana Paula </title>  
+</HEAD>
+
+  <BODY>
+    <H1>Essa é uma página de teste </H1>
+    <img src = "AluraStart.jpg>
   
 </BODY>
-  
-</HEAD>
 </HTL>
