--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <BODY>
     <H1>Essa é uma página de teste </H1>
-    <img src = "AluraStart.jpg>
+    <img src = "AluraStart.jpg">
   
 </BODY>
 </HTL>
