--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <HTML>
 <HEAD>
   <meta charset="UTF-8">
-  <title> Página da Ana Paula </title>  
+  <title>Página da Ana Paula</title>
+  <style>
+    body {
+      background-color: blue; /* Fundo azul */
+      color: white; /* Cor do texto branca para contraste */
+      text-align: center; /* Centraliza o texto e a imagem */
+    }
+
+    h1 {
+      font-size: 2.5em; /* Aumenta o tamanho da fonte do título */
+    }
+
+    img {
+      max-width: 100%; /* Adapta a imagem à largura do dispositivo */
+      height: auto; /* Mantém a proporção da imagem */
+    }
+  </style>
 </HEAD>
 
-  <BODY>
-    <H1>Essa é uma página de teste </H1>
-    <img src = "AluraStart.jpg">
-  
+<BODY>
+  <H1>Essa é uma página de teste</H1>
+  <img src="AluraStart.jpg" alt="Imagem da Alura Start">
 </BODY>
 </HTML>
