--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
     h1 {
       font-size: 2.5em; /* Aumenta o tamanho da fonte do título */
+      display: inline-block; /* Permite o alinhamento com a imagem */
+      vertical-align: middle; /* Alinha verticalmente com a imagem */
     }
 
     img {
-      max-width: 100%; /* Adapta a imagem à largura do dispositivo */
+      max-width: 80%; /* Diminui a imagem para 80% da largura */
       height: auto; /* Mantém a proporção da imagem */
+      vertical-align: middle; /* Alinha verticalmente com o texto */
     }
   </style>
 </HEAD>
