--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Página da Ana Paula</title>
   <style>
     body {
-      background-color: pink; /* Fundo azul */
+      background-color: red; /* Fundo azul */
       color: white; /* Cor do texto branca para contraste */
       text-align: center; /* Centraliza o texto e a imagem */
     }
