--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <HEAD>
   <meta charset="UTF-8">
   <title>Página da Ana Paula</title>
+  <script scr="sketch.js">
+  </script>
   <style>
     body {
       background-color: red; /* Fundo azul */
