--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </HEAD>
 
 <BODY>
-    <script scr="sketch.js">
+    <script src="sketch.js">
   </script>
   <H1>Essa é uma página de teste</H1>
   <img src="AluraStart.jpg" alt="Imagem da Alura Start">
