--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       text-align: center; /* Centraliza o texto e a imagem */
     }
 
+     #canvas-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+
     h1 {
       font-size: 2.5em; /* Aumenta o tamanho da fonte do título */
       display: inline-block; /* Permite o alinhamento com a imagem */
