--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     img {
       max-width: 30%; /* Diminui a imagem para 80% da largura */
-      height: auto; /* Mantém a proporção da imagem */
+      /*height: auto; * Mantém a proporção da imagem */
       vertical-align: middle; /* Alinha verticalmente com o texto */
     }
   </style>
