--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <style>
     body {
-      background-color: red; /* Fundo azul */
+      background-color: green; /* Fundo azul */
       color: white; /* Cor do texto branca para contraste */
       text-align: center; /* Centraliza o texto e a imagem */
     }
@@ -23,7 +23,7 @@
     }
 
     img {
-      max-width: 30%; /* Diminui a imagem para 80% da largura */
+      max-width: 10%; /* Diminui a imagem para 80% da largura */
       /*height: auto; * Mantém a proporção da imagem */
       vertical-align: middle; /* Alinha verticalmente com o texto */
     }
