--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
   <meta charset="UTF-8">
   <title>Página da Ana Paula</title>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <style>
     body {
-      background-color: green; /* Fundo azul */
-      color: white; /* Cor do texto branca para contraste */
-      text-align: center; /* Centraliza o texto e a imagem */
+      background-color: green;
+      color: white;
+      text-align: center;
+      margin: 0;
+      padding: 0;
     }
 
-     #canvas-container {
+    #canvas-container {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+    }
 
     h1 {
-      font-size: 2.5em; /* Aumenta o tamanho da fonte do título */
-      display: inline-block; /* Permite o alinhamento com a imagem */
-      vertical-align: middle; /* Alinha verticalmente com a imagem */
+      font-size: 2.5em;
+      display: inline-block;
+      margin-right: 20px; /* Espaçamento entre o título e a imagem */
     }
 
     img {
-      max-width: 10%; /* Diminui a imagem para 80% da largura */
-      /*height: auto; * Mantém a proporção da imagem */
-      vertical-align: middle; /* Alinha verticalmente com o texto */
+      max-width: 200px; /* Diminui a imagem para 200px de largura */
+      height: auto;
+      vertical-align: middle;
     }
   </style>
-</HEAD>
+</head>
 
-<BODY>
-    <script src="sketch.js">
-  </script>
-  <H1>Essa é uma página de teste</H1>
-  <img src="AluraStart.jpg" alt="Imagem da Alura Start">
-</BODY>
-</HTML>
+<body>
+  <div id="canvas-container">
+    <h1>Essa é uma página de teste</h1>
+    <img src="AluraStart.jpg" alt="Imagem da Alura Start">
+  </div>
+  <script src="sketch.js"></script>
+</body>
+</html>
